objects/Interaction__c.object
<CustomObject><fields>
        <fullName>Academic_Form_Processing__c</fullName>
        <inlineHelpText>Multiple reasons can be chosen</inlineHelpText>
        <label>Academic Form Processing</label>
        <picklist>
            <picklistValues>
                <fullName>Add/Drop Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPT/CPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer Verification</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Name</field>
                <operation>contains</operation>
                <value>Academic</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Appointment_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Appointment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AppointmentContact__c.AppointmentSlot__r.Center__c</field>
                <operation>contains</operation>
                <value>CASA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AppointmentContact__c</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Appointment_Date__c</fullName>
        <description>Date of the Appointment related to the Interaction</description>
        <formula>Appointment_Contact__r.Start_Date__c</formula>
        <label>Appointment Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Appointment_Time__c</fullName>
        <description>Time of the related appointment.</description>
        <formula>Appointment_Contact__r.Start_Time__c</formula>
        <label>Appointment Time</label>
        <type>Text</type>
    </fields><fields>
        <fullName>CWID__c</fullName>
        <formula>Student__r.CWID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CWID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Interaction_Date__c</fullName>
        <label>Interaction Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Interaction_Origin__c</fullName>
        <inlineHelpText>Select the type of interaction</inlineHelpText>
        <label>Interaction Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Drop-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit -Scheduled appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebTrack</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Meeting_Note_Summary__c</fullName>
        <inlineHelpText>Meeting notes to be shared with the student.</inlineHelpText>
        <label>Meeting Note Summary</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Notes_Internal__c</fullName>
        <inlineHelpText>Notes for CASA Staff only</inlineHelpText>
        <label>Notes (Internal)</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Phone__c</fullName>
        <formula>Student__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Primary_ASC_Reason__c</fullName>
        <label>Primary ASC Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Academic Coaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Disqualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Form Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Integrity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Probation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMBIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dean's Letter / Tuition Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disability Related Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disruptive Behavior / Disciplinary Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Alert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty/Student Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty Notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade Appeal / Grade Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homesickness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing / Residence Hall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leave of Absence/Withdrawal from USF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss / Grief</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major / Minor Exploration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Student Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOM Waitlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Study Abroad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substance Abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underenrolled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Referred_By_Email__c</fullName>
        <label>Referred By Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Referred_By__c</fullName>
        <label>Referred By</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Secondary_ASC_Reasons__c</fullName>
        <label>Secondary ASC Reasons</label>
        <picklist>
            <picklistValues>
                <fullName>Academic Coaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Disqualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Form Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Integrity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Probation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMBIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dean's Letter / Tuition Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disability Related Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disruptive Behavior / Disciplinary Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Alert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty/Student Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty Notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade Appeal / Grade Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homesickness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing / Residence Hall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leave of Absence/Withdrawal from USF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss / Grief</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major / Minor Exploration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Student Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOM Waitlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Study Abroad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substance Abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underenrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webtrack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawal from Class</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Staff__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Staff</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>We could not find a CASA Coach with this name. Please make sure that the CASA Staff flag is checked on the coach's contact record.</errorMessage>
            <filterItems>
                <field>Contact.CASA_Staff__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.Faculty__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Interactions (Staff)</relationshipLabel>
        <relationshipName>Interactions_Staff</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Standard_Action_Items__c</fullName>
        <label>Standard Action Items</label>
        <picklist>
            <picklistValues>
                <fullName>Schedule a follow-up appointment with your ASC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retrieve the appropriate signatures on your paperwork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Talk to your professor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submit a written summary of your request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete a degree projection with your faculty advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolve the hold(s) on your account</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Student_Email__c</fullName>
        <description>Student USF Email</description>
        <formula>Student__r.Email</formula>
        <label>Student Email</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Student</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Student__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Interactions_Student</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Study_Abroad_ASC__c</fullName>
        <label>Study Abroad</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Interaction</label><nameField>
        <label>Interaction Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Interactions</pluralLabel><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>Phone__c</columns>
        <columns>Interaction_Origin__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <label>Master</label>
    </recordTypes></CustomObject>